--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "meteor-node-stubs": "~0.2.0",
     "babel-runtime": "6.18.0",
     "react": "~15.4.1",
-    "react-dom": "~15.4.1"
+    "react-dom": "~15.4.1",
+    "axios": "~0.15.3"
   }
 }
